--- a/pac04.html
+++ b/pac04.html
@@ -659,7 +659,7 @@ algorithm mitjanaPes
             que en la següent iteració del bucle, es continuï intentant afegir el valor llegit dins
             de la posició &#39;i&#39; del bucle }
 
-        end fi
+        end if
 
         { En aquest punt tenim el vectorPesos que té 7 (=NUM_DIES) pesos vàlids }
 
